--- a/src/PreTrip/Content/Site.css
+++ b/src/PreTrip/Content/Site.css
@@ -115,3 +115,16 @@ a .open .dropdown-toggle.btn-warning{
     box-shadow: 0px 0px 30px 3px rgba(0, 0, 0,0.3);
 }
 
+.viagem-box {
+	margin: 0.4em;
+	padding: 0.8em;
+
+	border: 1px solid #d3d3d3;
+	border-bottom: 3px solid #d3d3d3;
+}
+
+	.viagem-box .adds {
+		color: #d3d3d3;
+		font-size: 1.4rem;
+		font-weight: bold;
+	}
