Retirado plural dos controllers e retirado namespaces

--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -50,8 +50,8 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li>@Html.ActionLink("Cadastrar Empresa", "CadastroEmpresa", "Usuarios")</li>
-                <li>@Html.ActionLink("Consultar Empresas Cadastradas", "VisualizarEmpresas", "Usuarios")</li>                
+                <li>@Html.ActionLink("Cadastrar Empresa", "CadastroEmpresa", "Usuario")</li>
+                <li>@Html.ActionLink("Consultar Empresas Cadastradas", "VisualizarEmpresas", "Usuario")</li>                
             </ul>
         </div>
     </div>
