--- a/src/PreTrip/Views/Home/Cadastrar.cshtml
+++ b/src/PreTrip/Views/Home/Cadastrar.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-8">
         @using (Html.BeginForm("Cadastrar", "Home", FormMethod.Post))
         {
-            @Html.Partial("~/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml", @Model);
+            @Html.Partial("~/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml", @Model)
         }
     </div>
 </div>
