--- a/src/PreTrip/Views/Usuario/AlterarUsuario.cshtml
+++ b/src/PreTrip/Views/Usuario/AlterarUsuario.cshtml
@@ -3,12 +3,7 @@
 {
     <div class="container">
         <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-addon">
-                    <i class="material-icons" style="font-size: 16px">person</i>
-                </div>
-                @Html.EditorFor(x => PreTripSession.Usuario.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário" } })
-            </div>
+            
             <div class="input-group">
                 <div class="input-group-addon">
                     <i class="material-icons" style="font-size: 16px">face</i>
@@ -27,21 +22,19 @@
                 </div>
                 @Html.EditorFor(x => PreTripSession.Usuario.Pessoa.Telefone, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
             </div>
+            
+            <hr/>
+            
             <div class="input-group">
                 <div class="input-group-addon">
-                    <i class="material-icons" style="font-size: 16px">subtitles</i>
+                    <i class="material-icons" style="font-size: 16px">lock</i>
                 </div>
-                @Html.EditorFor(x => PreTripSession.Usuario.Pessoa.Cpf, new { htmlAttributes = new { @class = "form-control", placeholder = "Cpf" } })
-            </div>
-            <div class="input-group">
-                <div class="input-group-addon">
-                    <i class="material-icons" style="font-size: 16px">date_range</i>
-                </div>
-                @Html.EditorFor(x => PreTripSession.Usuario.Pessoa.DtNascimento, new { htmlAttributes = new { @class = "form-control", placeholder = "Data", type = "date" } })
+                @Html.PasswordFor(x => PreTripSession.Usuario.Senha, new { @class = "form-control", placeholder = "Senha" })
             </div>
         </div>
-        
+
         <div class="pull-right">
+            <input type="hidden" name="oldSenha" value="@PreTripSession.Usuario.Senha"/>
             <button type="submit" class="btn btn-warning pull-right">Confirmar</button>
         </div>
     </div>
