--- a/src/PreTrip/Views/Administrativo/Viagens.cshtml
+++ b/src/PreTrip/Views/Administrativo/Viagens.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoBefore.cshtml");
+@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoBefore.cshtml")
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
@@ -35,4 +35,4 @@
     </table>
 </div>
 
-@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoAfter.cshtml");
+@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoAfter.cshtml")
