--- a/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
+++ b/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
@@ -31,7 +31,7 @@
             <div class="modal-body">
                 @using (Html.BeginForm("CadastrarEmpresa", "Administrativo", FormMethod.Post))
                 {
-                    @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml",new PreTrip.Model.Classes.Empresa());
+                    @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml",new PreTrip.Model.Classes.Empresa())
                 }
             </div>
             <br />
