--- a/src/PreTrip/Views/Usuario/Index.cshtml
+++ b/src/PreTrip/Views/Usuario/Index.cshtml
@@ -5,10 +5,10 @@
 @using System.Web.UI.WebControls
 @model PreTrip.Model.Classes.Usuario
 
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml");
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
 
 <!-- Tela de cadastro de empresas-->
 TELA INICIAL
 
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml");
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml")
 
