--- a/src/PreTrip/Views/Administrativo/Administrativo.cshtml
+++ b/src/PreTrip/Views/Administrativo/Administrativo.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoBefore.cshtml");
+@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoBefore.cshtml")
 
             <div class="panel panel-default">
                 <!-- Default panel contents -->
@@ -28,4 +28,4 @@
                 </table>
             </div>
 
-@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoAfter.cshtml");
+@Html.Partial("~/Views/Shared/Administrativo/_AdministrativoAfter.cshtml")
