--- a/src/PreTrip/Views/Administrativo/CadastrarEmpresa.cshtml
+++ b/src/PreTrip/Views/Administrativo/CadastrarEmpresa.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml");
+@Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml")
 
