--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PreTrip.Model.Classes.Usuario
 
-@Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml");
+@Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml")
 
 <div class="form-group">
     <div class="input-group">
