--- a/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
+++ b/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 @using (Html.BeginForm("CadastrarUsuario", "Administrativo", FormMethod.Post))
                 {
-                    @Html.Partial("~/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml", @Model);
+                    @Html.Partial("~/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml", @Model)
                 }
             </div>
             <br />
