Navbar diferentes para usuário logado ou não

--- a/src/PreTrip/Views/Usuario/Empresas.cshtml
+++ b/src/PreTrip/Views/Usuario/Empresas.cshtml
@@ -11,21 +11,14 @@
 
 <table class="table table-hover" style="width:50%;margin:0 auto;">
 
+    <h3 style="text-align:center;">Minhas Empresas Cadastradas</h3>
+
     <thead>
         <tr>
-            <th colspan="4" style="text-align:center;">Minhas Empresas Cadastradas</th>
-        </tr>
-        <tr>
             <th>CNPJ</th>
-        </tr>
-        <tr>
             <th>Razao Social</th>
-        </tr>
-        <tr>
             <th>Nome Fantasia</th>
-        </tr>
-        <tr>
-            <th>Ações</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
