Home agora usa viewmodel

--- a/src/PreTrip/Views/Usuario/Index.cshtml
+++ b/src/PreTrip/Views/Usuario/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@{
-    ViewBag.Title = "title";
-}
-
-@using System.Web.UI.WebControls
-@model PreTrip.Model.Classes.Usuario
+﻿@model PreTrip.Model.Classes.Usuario
 
 @Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
 
