--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@model PreTrip.Model.Classes.Usuario
-@{
-    ViewBag.Title = "Pre-Trip";
-}
+﻿@model PreTrip.ViewModel.HomeViewModel
 
 <div class="bg-img-content">
     <aside class="bg-img-content-img"
@@ -19,14 +15,14 @@
                         <div class="input-group-addon">
                             <i class="material-icons" style="font-size: 16px">person</i>
                         </div>
-                        @Html.EditorFor(x => x.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário" } })
+                        @Html.EditorFor(x => x.Usuario.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário" } })
                     </div>
 
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="material-icons" style="font-size: 16px">lock</i>
                         </div>
-                        @Html.PasswordFor(x => x.Senha, new { @class = "form-control", placeholder = "Senha" })
+                        @Html.PasswordFor(x => x.Usuario.Senha, new { @class = "form-control", placeholder = "Senha" })
                     </div>
                 </div>
 
@@ -43,12 +39,15 @@
             <p class="text-center" style="font-size: 2rem; margin-top: 2em;">Mais de @ViewBag.QuantidadeViagens opções diferentes para você navegar.</p>
             <div class="row" style="margin-top: 3em;">
                 <div class="col-xs-8 wrapcenter">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Ex: Hopi Hari, CBLoL...">
-                        <span class="input-group-btn">
-                            @Html.ActionLink("Pesquisar", "Index", "Viagens", new { @class = "btn btn-default" })                           
-                        </span>
-                    </div>
+                    @using (Html.BeginForm("Index", "Viagem", FormMethod.Post, new { @class = "row" }))
+                    {
+                        <div class="input-group">
+                            @Html.EditorFor(x => x.Busca.Termo, new { htmlAttributes = new { @class = "form-control", placeholder = "Ex: Hopi Hari, CBLoL..." } })
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-default">Pesquisar</button>
+                            </span>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
