--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "PreTrip - Seu sonho no seu alcance!";
 }
+@using PreTrip.Session
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,38 +14,15 @@
 </head>
 <body>
     <!--Navbar-->
-    <div class="navbar">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    @{
-                        //Atributos comuns de cada botão do menu
-                        var att = new {
-                            @class = "btn navbar-btn btn"
-                        };
+    @if (PreTripSession.Usuario != null)
+    {
+        @Html.Partial("~/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml")
+    }
+    else
+    {
+        @Html.Partial("~/Views/Shared/Navbar/_PartialDefault.cshtml")
+    }
 
-                        //Pegos os atributos padrão à todos e adiciono o único a cada item
-                        var attHome = new { @class = att.@class + " btn-danger" };
-                        var attLogin = new { @class = att.@class + " btn-success" };
-                        var attCadastro = new { @class = att.@class + " btn-warning" };
-                    }
-
-                    <li>@Html.ActionLink("Home", "Index", "Home", attHome)</li>
-                    <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
-                    <li>@Html.ActionLink("Cadastre-se!", "Cadastrar", "Home", attCadastro)</li>                    
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    
     <div>
         <!--Content-->
         @RenderBody()
