--- a/src/PreTrip/Views/Viagem/Cadastrar.cshtml
+++ b/src/PreTrip/Views/Viagem/Cadastrar.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="bg-img-content">
-    <aside class="bg-img-content-img" style="background-color: deepskyblue;"></aside>
+    <aside class="bg-img-content-img" style="background-color: deepskyblue; background-size:cover; background: url(@Model.UrlImagem) center"></aside>
 
     <div class="row bg-img-content-ctn wrapcenter col-md-10 wrapcenter card">
         @using (Html.BeginForm("Cadastrar", "Viagem", FormMethod.Post, new { @class = "row" }))
@@ -27,8 +27,20 @@
             }
 
             <div class="form-group">
+                <label for="descricao">Título</label>
+                @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { placeholder = "Que tal... \"Turismo em Copacabana - Rio de Janeiro\"?", @class = "form-control" } })
+                <span class="help-block">Para onde vai a viagem? Talvez colocar um nome chamativo ou uma pequena lista dos locais ajude :)</span>
+            </div>
+
+            <div class="form-group">
+                <label for="descricao">URL para Imagem</label>
+                @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { placeholder = "Url", @class = "form-control" } })
+                <span class="help-block">Insira uma imagem de demonstre o lugar para qual você vai</span>
+            </div>
+
+            <div class="form-group">
                 <label for="descricao">Descrição</label>
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { placeholder = "Que tal... \"Turismo em Copacabana - Rio de Janeiro\"?", @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Descricao, new { htmlAttributes = new { Value = "Viagem com tudo pago para Hopi Hari, caminho por são paulo...", @class = "form-control" } })
                 <span class="help-block">Para onde vai a viagem? Talvez colocar um nome chamativo ou uma pequena lista dos locais ajude :)</span>
             </div>
 
