--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -21,7 +21,8 @@
             <div class="col-md-4">
                 <div class="btn-group-vertical" role="group" style="width: 100%;">
                     @Html.ActionLink("Empresas", "Empresas", "Usuario", new { @class = "btn btn-default" })
-					@Html.ActionLink("Viagens", "Index", "Viagem", new { @class = "btn btn-default" })
+                    @Html.ActionLink("Viagens", "Index", "Viagem", new { @class = "btn btn-default" })
+                    @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new { @class = "btn btn-default" })
                 </div>
             </div>
 
