--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml
@@ -7,21 +7,21 @@
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">label</i>            
         </div>        
-        @Html.EditorFor(x => x.Cnpj, new { htmlAttributes = new { @class = "form-control", placeholder = "CNPJ" ,maxlength = 11} })
+        @Html.EditorFor(x => x.Cnpj, new { htmlAttributes = new { @class = "form-control", placeholder = "CNPJ" , maxlength = 11, datatoggle = "tooltip", title = "CNPJ" } })
     </div>   
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">face</i>
         </div>
-        @Html.EditorFor(x => x.RazaoSocial, new { htmlAttributes = new { @class = "form-control", placeholder = "Razao Social" } })
+        @Html.EditorFor(x => x.RazaoSocial, new { htmlAttributes = new { @class = "form-control", placeholder = "Razao Social", datatoggle = "tooltip", title = "Razao Social" } })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">face</i>
         </div>
-        @Html.EditorFor(x => x.NomeFantasia, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome Fantasia" } })
+        @Html.EditorFor(x => x.NomeFantasia, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome Fantasia", datatoggle = "tooltip", title = "Nome Fantasia" } })
     </div>
 </div>
 
