--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
@@ -7,49 +7,49 @@
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">person</i>
         </div>
-        @Html.EditorFor(x => x.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário" } })
+        @Html.EditorFor(x => x.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário", datatoggle = "tooltip", title = "Usuário" } })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">lock</i>
         </div>
-        @Html.PasswordFor(x => x.Senha, new { @class = "form-control", placeholder = "Senha" })
+        @Html.PasswordFor(x => x.Senha, new { @class = "form-control", placeholder = "Senha", datatoggle = "tooltip", title = "Senha" })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">face</i>
         </div>
-        @Html.EditorFor(x => x.Pessoa.Nome, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome" } })
+        @Html.EditorFor(x => x.Pessoa.Nome, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome", datatoggle = "tooltip", title = "Nome" } })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">contact_mail</i>
         </div>
-        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email", datatoggle = "tooltip", title = "Email" } })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">local_phone</i>
         </div>
-        @Html.EditorFor(x => x.Pessoa.Telefone, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
+        @Html.EditorFor(x => x.Pessoa.Telefone, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone", datatoggle = "tooltip", title = "Telefone" } })
     </div>
 
     <div class="input-group">        
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">subtitles</i>
         </div>
-        @Html.EditorFor(x => x.Pessoa.Cpf, new { htmlAttributes = new { @class = "form-control", placeholder = "Cpf" } })
+        @Html.EditorFor(x => x.Pessoa.Cpf, new { htmlAttributes = new { @class = "form-control", placeholder = "Cpf", datatoggle = "tooltip", title = "CPF" } })
     </div>
 
     <div class="input-group">
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">date_range</i>
         </div>
-        @Html.EditorFor(x => x.Pessoa.DtNascimento, new { htmlAttributes = new { @class = "form-control", placeholder = "Data", type = "date" } })
+        @Html.EditorFor(x => x.Pessoa.DtNascimento, new { htmlAttributes = new { @class = "form-control", placeholder = "Data", type = "date", datatoggle = "tooltip", title = "Data Nascimento" } })
     </div>
 </div>
 
