--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -7,30 +7,59 @@
     <div class="col-md-10 wrapcenter" style="padding: 2em;">
 
         <div class="col-md-8">
-            <h3>@Model.Viagem.Titulo</h3>
+            <!--Título-->
+            <h3><i class="material-icons" style="vertical-align:middle;font-size: 4rem;">directions_bus</i> @Model.Viagem.Titulo</h3>
             <hr />
-            <p>
+
+            <!--Cidades-->
+            <div class="pull-right col-md-5" style="color: #868686">
+                <div>
+                    <i class="material-icons" style="vertical-align: middle">location_on</i>
+                    @Model.Viagem.Origem.Cidade - @Model.Viagem.Origem.Estado
+                </div>
+                <div>
+                    <i class="material-icons" style="vertical-align: middle">directions</i>
+                    @Model.Viagem.Destino.Cidade - @Model.Viagem.Destino.Estado
+                </div>
+            </div>
+
+            <!--Descrição-->
+            <div class="col-md-7">
                 @Model.Viagem.Descricao
-            </p>
+            </div>
+
+            <div class="clearfix"></div>
+            <hr />
+
+            <!--Veículo-->
+            <div>
+                <h3>Veículo. @Model.Viagem.Veiculo.Placa</h3>
+                @Model.Viagem.Veiculo.Modelo <br />
+                @Model.Viagem.Veiculo.Tipo <br />
+            </div>
         </div>
 
         <div class="col-md-4" style="border-left: 1px solid #808080">
             <div>
-                <div class="standard-infos">
-                    <span>
-                        <i class="material-icons">event_seat</i>
+                <div class="standard-infos" style="padding: 1em 2em; font-size: 2rem;">
+                    <div>
+                        <i class="material-icons" style="vertical-align: middle; font-size: 5rem;">event_seat</i>
                         @Model.Viagem.QuantidadeLugaresDisponiveis
-                    </span>
+                    </div>
                     <span>
+                        <i class="material-icons" style="vertical-align: middle;  font-size: 5rem;">monetization_on</i>
                         R$ @Model.Viagem.PrecoPassagem
                     </span>
                 </div>
-                <div>
+
+                <div class="clearfix"></div>
+
+                <div class="text-center" style="border-top: 1px solid #808080; padding: 1.3em;">
                     @{ 
                         var avaliacaoMedia = new PreTrip.Services.Viagens.ViagensService().GetAvaliacaoMedia(Model.Viagem.Avaliacoes);
                     }
-                    <span style="vertical-align: middle">
-                        <i class="material-icons" style="font-size: 8rem; color: @avaliacaoMedia.Cor">
+                    <span style="vertical-align: middle;">
+                        <i class="material-icons" style="font-size: 5rem; vertical-align: middle; color: @avaliacaoMedia.Cor">
                             @avaliacaoMedia.Icon
                         </i>
                         @avaliacaoMedia.TextoResultado
