--- a/src/PreTrip/Views/Usuario/Interesses.cshtml
+++ b/src/PreTrip/Views/Usuario/Interesses.cshtml
@@ -7,19 +7,35 @@
 
 @using PreTrip.Session
 
-<span class="text-center">Escolha os principais destinos de seu interesse</span>
+<h3 style="text-align:center;">Escolha os principais destinos de seu interesse</h3>
 
 @using (Html.BeginForm("AlterarUsuario", "Usuario", FormMethod.Post))
 {
-    <div class="container">
+    <table class="table table-hover" style="width:50%;margin:0 auto;">
+        <thead>
+            <tr>
+                <th colspan="2" style="text-align:center;">Cidades</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
 
-        Falta fazer um FOR mostrando os interesses para o usuario escolher.
-
-        <div class="pull-right">
-            <input type="hidden" name="oldSenha" value="@PreTripSession.Usuario.Senha" />
-            <button type="submit" class="btn btn-warning pull-right">Confirmar</button>
-        </div>
-    </div>
+            @{#warning Implementar o For com as cidades aqui.}
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>
+                    <input type="checkbox" value="true" />
+                </td>
+            </tr>
+            @{#warning Terminar o For com as cidades aqui.}
+            <tr>
+                <td>
+                    <button type="submit" class="btn btn-warning pull-left">Confirmar</button>
+                </td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 }
 
 @Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml")
